feat(frontend): setup initial routing

--- a/apps/frontend/src/index.html
+++ b/apps/frontend/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Frontend</title>
+    <title>Lumen | Your Learning Platform</title>
     <base href="/" />
-
+    <link rel="manifest" href="/assets/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
