--- a/apps/frontend/src/index.html
+++ b/apps/frontend/src/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,600,700&display=swap"
     />
     <link
       rel="stylesheet"
